[gd_scene load_steps=2 format=3 uid="uid://cv1cysgx6ft33"]

[ext_resource type="Script" path="res://NavigationOnly/Scripts/MapList/MapListItem.gd" id="1_uvldu"]

[node name="MapListItem" type="PanelContainer"]
size_flags_horizontal = 3
script = ExtResource("1_uvldu")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="MapListItem" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MapListItem"]
layout_mode = 2
mouse_filter = 2

[node name="MapItemName" type="Label" parent="MapListItem/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Map Name!"
uppercase = true

[node name="MapItemDescription" type="Label" parent="MapListItem/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Map Description! Lengthy and verbose, maybe! Or short and pithy. Functionally endless options. Not exactly infinite, the limitations of memory and all that, but approaching infinite!"
clip_text = true
text_overrun_behavior = 3

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
